# CiteClaw

./: .gitignore  DIAGRAM.md  README.md  analysis.ipynb  annotate_graph.py  config.yaml  config_bio.yaml  config_bio_with_expansion.yaml  config_bio_with_gemma.yaml  config_rna.yaml  gemma4_client.py  modal_grobid_server.py  modal_s2_mirror.py  modal_s2orc_mirror.py  modal_vllm_server.py  modal_vllm_server_fp4.py  modal_webapp.py  pyproject.toml  s2mirror_bench.py  test_config.yaml
configs/: config.yaml
plans/: database_search_roadmap.md
src/citeclaw/: __init__.py  __main__.py  annotate.py  author_graph.py  budget.py  cache.py  config.py  context.py  dedup.py  event_sink.py  extraction.py  fetch_pdfs.py  logging_config.py  meta_review.py  models.py  network.py  pipeline.py  preflight.py  progress.py  web_server.py
src/citeclaw/agents/: __init__.py  dataframe_store.py  filter_summary.py  iterative_search.py  pdf_reference_extractor.py  query_parser.py  s2_query_lint.py  search_logging.py  search_tools.py  state.py  supervisor.py  tool_dispatch.py  worker.py
src/citeclaw/clients/: grobid.py  openalex.py  pdf.py  pdfclaw_bridge.py
src/citeclaw/cluster/: __init__.py  base.py  louvain.py  representation.py  topic_model.py  walktrap.py
src/citeclaw/filters/: __init__.py  base.py  builder.py  runner.py  venue_presets.py
src/citeclaw/mainpath/: __init__.py  base.py  cycles.py  (+3 more)
src/pdfclaw/: __init__.py  __main__.py  api.py  browser.py  cli.py  collection.py  fetcher.py  parser.py  s2_enrich.py  title_search.py
src/s2mirror/: __init__.py  jsonio.py  mapper.py  reducer.py  render.py  schema.py  server.py  store.py
src/s2orc_mirror/: __init__.py  jsonio.py  mapper.py  reducer.py  schema.py  server.py  store.py
tests/: conftest.py  fakes.py  smoke_pipelines.py  smoke_topics.py  test_annotate.py  test_browser_base_download.py  test_budget_per_model.py  test_cache.py  test_cluster_base.py  test_cluster_representation.py  test_cluster_topic_model.py  test_cluster_walktrap_louvain.py  test_config.py  test_dedup.py  test_embeddings.py  test_event_sink.py  test_expand_backward_openalex.py  test_expand_by_author.py  test_expand_by_pdf.py  test_expand_by_semantics.py  test_expand_family_e2e.py  test_expand_helpers.py  test_filters_atoms.py  test_filters_blocks.py  test_filters_builder.py  test_filters_runner.py  test_filters_source_less.py  test_formula.py  test_formula_word_ops.py  test_gemini_schema_strip.py  test_grobid.py  test_human_in_the_loop.py  test_iterative_search_agent.py  test_keyword_wildcard.py  test_llm.py  test_llm_caching.py  test_mainpath_cycles.py  test_mainpath_runner.py  test_mainpath_search.py  test_mainpath_weights.py  (+48 more)
tests_v3/: SEARCH_TEST.md  analyze.py  gen_config.py  test_query_shapes.py
tests_v3/configs/: prime_editing_gemini.yaml  prime_editing_gemma.yaml  prime_editing_grok.yaml  prime_editing_mini.yaml  prime_editing_openai.yaml
ui-elements/: README.md
ui-elements/paper-card/: README.md  demo-data.js  demo.html  paper-card.css  paper-card.jsx
web/: README.md  design_bundle.py
web/backend/: .env.example  __init__.py  catalog.py  main.py  runtime.py
web/demos/: module_a_network_a.html  module_a_network_b.html  module_a_network_c.html  module_a_network_d.html  module_a_network_e.html  module_a_network_f1.html  module_a_network_f2.html  module_a_network_f3.html  module_a_network_f4.html  module_a_network_f5.html  module_b_dashboard_a.html  module_b_dashboard_b.html  module_b_dashboard_c.html  module_b_dashboard_d.html  module_b_dashboard_e.html  page1_build_a.html  page1_build_b.html  page1_build_c.html  page1_build_d.html  page1_build_e.html  page1_build_v2.html  page1_build_v3.html  page1_build_v4.html
web/design-system/: SKILL.md  USAGE.md  readme.md  styles.css
web/design_docs/: README.html  api-contract.md
web/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/live/: README.md  run.py
web/public/: README.md
(+261 files in other folders)
