[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citeclaw"
version = "0.1.0"
description = "Snowballing-based literature acquisition system for systematic literature reviews"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-igraph>=0.11,<1",
    "tenacity>=8.2,<10",
    "openai>=1.10,<2",
    "google-genai>=1.0,<2",
    "pyyaml>=6.0,<7",
    "rich>=13.0,<15",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]
topic_model = [
    "umap-learn>=0.5,<1",
    "hdbscan>=0.8.33,<1",
    "scikit-learn>=1.3,<2",
    "numpy>=1.24,<3",
]
pdf = [
    # PyMuPDF (``import pymupdf``) is the primary parser used by
    # ``citeclaw.clients.pdf.parse_pdf_bytes`` — dramatically better
    # column / reading-order extraction on two-column scientific PDFs
    # than pypdf, and several times faster. Note: AGPL licensed.
    "pymupdf>=1.24,<2",
    # ``pypdf`` is kept as a pure-Python fallback for environments where
    # PyMuPDF cannot be installed (or where the AGPL is unacceptable).
    # ``parse_pdf_bytes`` automatically falls back to pypdf if pymupdf
    # is missing.
    "pypdf>=4.0,<6",
]
browser = [
    # pdfclaw — institutional-auth PDF fetcher driving a real Chrome
    # via Playwright. Needs both the Python package AND the chromium
    # binary, which is downloaded by ``python -m playwright install
    # chromium`` after the pip install.
    "playwright>=1.40,<2",
    "pymupdf>=1.24,<2",
]

[project.scripts]
citeclaw = "citeclaw.__main__:main"
pdfclaw = "pdfclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/citeclaw", "src/pdfclaw"]

[tool.ruff]
target-version = "py311"
line-length = 120
